# openquery

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  README.md  SECURITY.md  docker-compose.yml  pyproject.toml
.claude/: settings.local.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  publish.yml
.omx/: metrics.json  notepad.md
.omx/context/: quiero-que-desarrolles-el-proyecto-compleamente-20260404T024519Z.md
.omx/interviews/: quiero-que-desarrolles-el-proyecto-compleamente-20260404T031227Z.md
.omx/logs/: notify-fallback-2026-04-04.jsonl  notify-hook-2026-04-04.jsonl  omx-2026-04-04.jsonl  session-history.jsonl  tmux-hook-2026-04-04.jsonl  turns-2026-04-04.jsonl
.omx/plans/: adr-openquery-americas-wave1.md  prd-openquery-americas-expansion.md  prd-openquery-americas-official-sources.md  test-spec-openquery-americas-expansion.md  test-spec-openquery-americas-official-sources.md
.omx/specs/: deep-interview-quiero-que-desarrolles-el-proyecto-compleamente.md
.omx/state/: hud-state.json  notify-fallback-authority-owner.json  notify-fallback-state.json  notify-fallback.pid  notify-hook-state.json  session.json  skill-active-state.json  tmux-hook-state.json  update-check.json
docs/: adding-sources.md  americas-source-inventory.json  api.md  audit.md  captcha.md  competitors.md  getting-started.md  sources.md  test_results.json  test_results.md
tests/: conftest.py  test_afdc.py  test_aneel_ev.py  test_anfavea.py  test_antt_rntrc.py  test_api.py  test_api_extended.py  test_ar_afip_monotributo.py  test_ar_ceta.py  test_ar_cnv.py  test_ar_coprec.py  test_ar_enacom.py  test_ar_matricula_profesional.py  test_ar_mtpe.py  test_ar_registro_propiedad_caba.py  test_ar_repet.py  test_ar_sinai.py  test_ar_sisa_profesionales.py  test_ar_smn.py  test_ar_ssn_seguro.py  test_ar_vtv.py  test_audit.py  test_auth.py  test_auto_sales.py  test_az_mvd.py  test_banxico.py  test_bcra_deudores.py  test_bis.py  test_bls.py  test_bo_abi.py  test_bo_aduana.py  test_bo_ajam.py  test_bo_asfi.py  test_bo_autoridad_fiscalizacion.py  test_bo_bcb.py  test_bo_ddrr.py  test_bo_sedes.py  test_bo_segip.py  test_bo_senapi.py  test_bo_sicoes.py  (+377 more)
(+1161 files in other folders)
