[project]
name = "openquery"
version = "0.3.0"
description = "Query public data sources worldwide via scraping and APIs"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
authors = [
    { name = "dacrypt", email = "dev@dacrypt.dev" },
]
keywords = ["scraping", "government", "public-data", "api", "playwright", "captcha", "web-scraping"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP :: Indexing/Search",
    "Framework :: FastAPI",
    "Typing :: Typed",
]
dependencies = [
    "typer>=0.15",
    "rich>=13.9",
    "httpx>=0.28",
    "pydantic>=2.10",
    "pydantic-settings>=2.7",
    "playwright>=1.49",
    "pytesseract>=0.3.13",
    "Pillow>=11.0",
    "cachetools>=5.5",
]

[project.urls]
Homepage = "https://github.com/dacrypt/openquery"
Repository = "https://github.com/dacrypt/openquery"
Issues = "https://github.com/dacrypt/openquery/issues"
Changelog = "https://github.com/dacrypt/openquery/blob/main/CHANGELOG.md"

[project.optional-dependencies]
serve = ["fastapi>=0.115", "uvicorn[standard]>=0.34"]
redis = ["redis[hiredis]>=5.2"]
captcha = ["2captcha-python>=1.5"]
trocr = ["transformers>=4.40", "torch>=2.0", "sentencepiece>=0.2"]
huggingface = ["huggingface_hub>=0.25"]
paddleocr = ["paddlepaddle>=3.0", "paddleocr>=3.0"]
easyocr = ["easyocr>=1.7"]
dev = ["pytest>=8", "pytest-asyncio>=0.24", "pytest-httpx>=0.35", "ruff>=0.9"]

[project.scripts]
openquery = "openquery.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/openquery"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: marks tests that hit real external services (deselect with '-m \"not integration\"')",
]
